Issue dependencies (#62)
* Parse dependencies

* Create external org, repo and issue for dependencies

* Add issue dependency model/table

* WIP: Create issue dependencies

* Works

* Missed some stuff

* Remove debug print

* Make upsert of dependencies work
